namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: forgerock
  labels:
    name: forgerock
