service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: forgerock
    name: forgerock-svc
    namespace: forgerock 
spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
        app: forgerock
    type: ClusterIP
