ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgerock-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: forgerock 
spec:
  rules:
    - host: forgerock-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgerock-svc
                port:
                  number: 8080
